// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card does not error check malformed link 1`] = `
<div
  className="twoColumn leftAligned"
  id="card-4-0"
>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    <img
      alt="kitten"
      className="itemImage"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <p
    className="itemTitle"
    id="title-4-0"
  >
    <a
      className="unstyledLink"
      onClick={[Function]}
      style={Object {}}
    >
      Kitten
    </a>
  </p>
  <div>
    <hr
      className="dash"
      id="hr-4-0"
      style={
        Object {
          "width": "3.333rem",
        }
      }
    />
    <p
      className="itemSubTitle"
      id="subtitle-text-4-0"
    >
      A kitten, also known as a kitty or kitty cat, is a juvenile cat
    </p>
  </div>
  <p>
    <a
      onClick={[Function]}
      style={Object {}}
    >
      dogs
    </a>
  </p>
</div>
`;

exports[`Card to render correctly 1`] = `
<div
  className="twoColumn leftAligned"
  id="card-4-0"
>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    <img
      alt="kitten"
      className="itemImage"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <p
    className="itemTitle"
    id="title-4-0"
  >
    <a
      className="unstyledLink"
      onClick={[Function]}
      style={Object {}}
    >
      Kitten
    </a>
  </p>
  <div>
    <hr
      className="dash"
      id="hr-4-0"
      style={
        Object {
          "width": "3.333rem",
        }
      }
    />
    <p
      className="itemSubTitle"
      id="subtitle-text-4-0"
    >
      A kitten, also known as a kitty or kitty cat, is a juvenile cat
    </p>
  </div>
  <p>
    <a
      onClick={[Function]}
      style={Object {}}
    >
      Learn more about kittens
    </a>
  </p>
</div>
`;

exports[`Card to render correctly if the link is just a string 1`] = `
<div
  className="twoColumn leftAligned"
  id="card-4-0"
>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    <img
      alt="kitten"
      className="itemImage"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <p
    className="itemTitle"
    id="title-4-0"
  >
    <a
      className="unstyledLink"
      onClick={[Function]}
      style={Object {}}
    >
      Kitten
    </a>
  </p>
  <div>
    <hr
      className="dash"
      id="hr-4-0"
      style={
        Object {
          "width": "3.333rem",
        }
      }
    />
    <p
      className="itemSubTitle"
      id="subtitle-text-4-0"
    >
      A kitten, also known as a kitty or kitty cat, is a juvenile cat
    </p>
  </div>
  <p>
    <a
      onClick={[Function]}
      style={Object {}}
    >
      Learn more
    </a>
  </p>
</div>
`;

exports[`Card to render correctly with null link 1`] = `
<div
  className="twoColumn leftAligned"
  id="card-4-0"
>
  <img
    alt="kitten"
    className="itemImage"
    id="image-4-0"
    src="https://placekitten.com/588/364"
  />
  <p
    className="itemTitle"
    id="title-4-0"
  >
    Kitten
  </p>
  <div>
    <hr
      className="dash"
      id="hr-4-0"
      style={
        Object {
          "width": "3.333rem",
        }
      }
    />
    <p
      className="itemSubTitle"
      id="subtitle-text-4-0"
    >
      A kitten, also known as a kitty or kitty cat, is a juvenile cat
    </p>
  </div>
</div>
`;
